force-app/main/default/objects/Contact/fields/Acccount_Name__c.field-meta.xml
<CustomField>
    <fullName>Acccount_Name__c</fullName>
    <description>Formula field which shows the Industrial Account in which this contact is associated with.
Field Type: IA
Integrated: Y</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field which shows the Industrial Account in which this contact is associated with.</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>