force-app/main/default/objects/Contact/fields/Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Alias__c</fullName>
    <formula>Account.Account_Alias__c</formula>
    <label>Account Alias</label>
    <type>Text</type>
</CustomField>