force-app/main/default/objects/Contact/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>This is the Account Number from the related Account.</description>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Account Number from the related Account.</inlineHelpText>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>