force-app/main/default/objects/Contact/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>This is the Account Owner from the related Account.</description>
    <formula>(Account.Owner.FirstName) &amp; &quot; &quot; &amp;(Account.Owner.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Account Owner from the related Account.</inlineHelpText>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>