force-app/main/default/objects/Contact/fields/Account_record_type__c.field-meta.xml
<CustomField>
    <fullName>Account_record_type__c</fullName>
    <description>This is the Record Type pulled from the related Account.</description>
    <formula>Account.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Record Type pulled from the related Account.</inlineHelpText>
    <label>Account record type</label>
    <type>Text</type>
</CustomField>