force-app/main/default/objects/Contact/fields/Account_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Safe_ID__c</fullName>
    <description>Related Account 18 Character System Assigned Unique ID</description>
    <formula>Account.Account_Safe_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Related Account 18 Character System Assigned Unique ID</inlineHelpText>
    <label>Account Safe ID</label>
    <type>Text</type>
</CustomField>