force-app/main/default/objects/Contact/fields/Account_Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Store_Number__c</fullName>
    <description>This is the Store Number from the related Account.</description>
    <formula>Account.Store_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Store Number from the related Account.</inlineHelpText>
    <label>Account Store Number</label>
    <type>Text</type>
</CustomField>