force-app/main/default/objects/Contact/fields/Account_Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Store_Type__c</fullName>
    <description>This is the Store Type from the related Account.</description>
    <formula>TEXT( Account.Store_Ownership_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Store Type from the related Account.</inlineHelpText>
    <label>Account Store Type</label>
    <type>Text</type>
</CustomField>