force-app/main/default/objects/Contact/fields/Address_Notes__c.field-meta.xml
<CustomField>
    <fullName>Address_Notes__c</fullName>
    <description>From &quot;Combined Contact Requirements for Review 3-26&quot; spreadsheet</description>
    <label>Address Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>