force-app/main/default/objects/Contact/fields/Address_same_as_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Address_same_as_Accounts__c</fullName>
    <description>Picklist to indicate if the contacts address is the same as the account in which they are associated with.  Values are Same as Account or Different
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Picklist to indicate if the contacts address is the same as the account in which they are associated with.  Values are Same as Account or Different</inlineHelpText>
    <label>Address same as Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same as Physical</fullName>
            </value>
            <value>
                <fullName>Same as Billing</fullName>
            </value>
            <value>
                <fullName>Different</fullName>
            </value>
            <value>
                <fullName>Same as Account</fullName>
                <isActive>false</isActive>
                <label>Same as Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>