force-app/main/default/objects/Contact/fields/Agency_User__c.field-meta.xml
<CustomField>
    <fullName>Agency_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify Users who are Agency Users.</description>
    <inlineHelpText>Please enter the Agency User if this user is an Agency User.</inlineHelpText>
    <label>Agency User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AgencyContacts</relationshipName>
    <type>Lookup</type>
</CustomField>