force-app/main/default/objects/Contact/fields/Billing_Address_Options__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Options__c</fullName>
    <description>Picklist to indicate if the contacts address is the same as the account billing address in which they are associated with.  Values are Same as Account or Different
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Picklist to indicate if the contacts address is the same as the account billing address in which they are associated with.  Values are Same as Account or Different</inlineHelpText>
    <label>Billing Address Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same as Account</fullName>
            </value>
            <value>
                <fullName>Different</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>