force-app/main/default/objects/Contact/fields/BPR_Role__c.field-meta.xml
<CustomField>
    <fullName>BPR_Role__c</fullName>
    <description>Business Partner Community Contact Roles
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Business Partner Community Contact Roles</inlineHelpText>
    <label>BPC Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact</fullName>
                <default>true</default>
                <label>Primary Contact</label>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Admin Asst</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Company Executive</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>EH&amp;S</fullName>
            </value>
            <value>
                <fullName>Facility and Operations Manager</fullName>
            </value>
            <value>
                <fullName>Human Resource Management</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Purchasing Management</fullName>
            </value>
            <value>
                <fullName>Safety Director</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Store Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Admin Assistant</fullName>
                <isActive>false</isActive>
                <label>Admin Assistant</label>
            </value>
            <value>
                <fullName>EH&amp;S (Environmental, Health, Safety)</fullName>
                <isActive>false</isActive>
                <label>EH&amp;S (Environmental, Health, Safety)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>