force-app/main/default/objects/Contact/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <formula>Account.Brands__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brands</label>
    <type>Text</type>
</CustomField>