force-app/main/default/objects/Contact/fields/Chatter_Registration__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is integrated with Eloqua and is checked when the contact has requested sign up for chatter.</description>
    <inlineHelpText>Integrated with Eloqua - If checked the contact has signed up for Chatter</inlineHelpText>
    <label>Chatter Registration</label>
    <type>Checkbox</type>
</CustomField>