force-app/main/default/objects/Contact/fields/Clean__c.field-meta.xml
<CustomField>
    <fullName>Clean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Contacts imported from ACT! or Outlook; indicates de-dupe is complete</description>
    <label>Clean</label>
    <type>Checkbox</type>
</CustomField>