force-app/main/default/objects/Contact/fields/Contact_Alert__c.field-meta.xml
<CustomField>
    <fullName>Contact_Alert__c</fullName>
    <formula>if(
     Contact_Alert_Active__c = true, IMAGE( &quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;, 20, 20), null
  )</formula>
    <inlineHelpText>Read Contact Alert Notes field for information on how to handle calls from this Contact</inlineHelpText>
    <label>Contact Alert</label>
    <type>Text</type>
</CustomField>