force-app/main/default/objects/Contact/fields/Contact_Alert_Active__c.field-meta.xml
<CustomField>
    <fullName>Contact_Alert_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indiciates a problem Contact; instructions to handle the Contact are included in the Contact Alert Notes field.</description>
    <inlineHelpText>Check this box to display a red flag indicating this is a problem Contact.  Add info to the Contact Alert Notes field to describe the problem.</inlineHelpText>
    <label>Contact Alert Active</label>
    <type>Checkbox</type>
</CustomField>