force-app/main/default/objects/Contact/fields/Contact_Alert_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Alert_Notes__c</fullName>
    <inlineHelpText>Info on why there is an alert on this Contact.</inlineHelpText>
    <label>Contact Alert Notes</label>
    <type>TextArea</type>
</CustomField>