force-app/main/default/objects/Contact/fields/Contact_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Contact_Identifier__c</fullName>
    <description>This field was requested by Jeff G to identify the primary contact.</description>
    <inlineHelpText>Please identify this contact as Primary or Billing.</inlineHelpText>
    <label>Contact Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Primary &amp; Billing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Invoice Payment Portal Admin</label>
            </value>
            <value>
                <fullName>Truck Run</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>