force-app/main/default/objects/Contact/fields/Contact_Preference__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preference__c</fullName>
    <inlineHelpText>Inidicate the method by which this Contact prefers to be contacted</inlineHelpText>
    <label>Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <color>#0B6FCE</color>
                <label>Email</label>
            </value>
            <value>
                <fullName>Phone - Office</fullName>
                <color>#78C953</color>
                <label>Phone - Office</label>
            </value>
            <value>
                <fullName>Phone - Mobile</fullName>
                <color>#E27001</color>
                <label>Phone - Mobile</label>
            </value>
            <value>
                <fullName>USPS</fullName>
                <color>#A845DC</color>
                <label>USPS</label>
            </value>
            <value>
                <fullName>Fax</fullName>
                <color>#F3D904</color>
                <label>Fax</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>