force-app/main/default/objects/Contact/fields/Contact_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Safe_ID__c</fullName>
    <description>18 Character System Assigned Unique ID used in integrations</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>18 Character System Assigned Unique ID</inlineHelpText>
    <label>Contact Safe ID</label>
    <type>Text</type>
</CustomField>