force-app/main/default/objects/Contact/fields/Contact_Same_as_Primary__c.field-meta.xml
<CustomField>
    <fullName>Contact_Same_as_Primary__c</fullName>
    <description>Picklist to indicate if the billing contact is the same as the primary contact for the account in which they are associated with.  Values are Yes or Different
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Picklist to indicate if the billing contact is the same as the primary contact for the account in which they are associated with.  Values are Yes or Different</inlineHelpText>
    <label>Contact Same as Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Different</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>