force-app/main/default/objects/Contact/fields/Create_New_Contact__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Contact__c</fullName>
    <formula>HYPERLINK(&quot;/003/e?retURL=%2F003%2Fo&amp;RecordType=012F0000000qHdp&amp;ent=Contact&quot;, &quot;Create New Contact&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create New Contact</label>
    <type>Text</type>
</CustomField>