force-app/main/default/objects/Contact/fields/Create_Survey_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Survey_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not delete.Used when a related case is closed this field gets checked and triggers a workflow to create a new survey task for the contact related to the case</description>
    <label>Create Survey Task</label>
    <type>Checkbox</type>
</CustomField>