force-app/main/default/objects/Contact/fields/Currently_have_a_Shoe_Program__c.field-meta.xml
<CustomField>
    <fullName>Currently_have_a_Shoe_Program__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Currently have a Shoe Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>