force-app/main/default/objects/Contact/fields/Do_Not_Send_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Surveys__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to flag contacts that do not want to receive surveys.</description>
    <label>Do Not Send Surveys</label>
    <type>Checkbox</type>
</CustomField>