force-app/main/default/objects/Contact/fields/Eloqua_Do_Not_Pull__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Do_Not_Pull__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eloqua Do Not Pu..</description>
    <label>Eloqua Do Not Pull</label>
    <type>Checkbox</type>
</CustomField>