force-app/main/default/objects/Contact/fields/Email_Financials__c.field-meta.xml
<CustomField>
    <fullName>Email_Financials__c</fullName>
    <description>Indicates that financials are sent to this contact. This is intended for Dealer Stores but could be used for more than that.</description>
    <inlineHelpText>Indicates that financials are sent to this contact. This is intended for Dealer Stores but could be used for more than that.

Responsible Owner: Retail Accounting</inlineHelpText>
    <label>Email Financials</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>