force-app/main/default/objects/Contact/fields/Email_Note__c.field-meta.xml
<CustomField>
    <fullName>Email_Note__c</fullName>
    <label>Email Note</label>
    <length>80</length>
    <type>Text</type>
</CustomField>