force-app/main/default/objects/Contact/fields/Employer_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Employer_Subsidy__c</fullName>
    <label>Employer Subsidy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>