force-app/main/default/objects/Contact/fields/EMS_Login__c.field-meta.xml
<CustomField>
    <fullName>EMS_Login__c</fullName>
    <description>The alpha character EMS User Login name provided in the EMS
To SFDC integration</description>
    <inlineHelpText>The alpha character EMS User Login name provided in the EMS
To SFDC integration</inlineHelpText>
    <label>EMS Login</label>
    <length>10</length>
    <type>Text</type>
</CustomField>