force-app/main/default/objects/Contact/fields/Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID__c</fullName>
    <description>Entity ID provided in the EMS to SFDC integration</description>
    <inlineHelpText>Entity ID provided in the EMS to SFDC integration</inlineHelpText>
    <label>Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>