force-app/main/default/objects/Contact/fields/External_ID_Contact_Bus_Dev__c.field-meta.xml
<CustomField>
    <fullName>External_ID_Contact_Bus_Dev__c</fullName>
    <externalId>true</externalId>
    <label>External ID Contact Bus Dev</label>
    <length>20</length>
    <type>Text</type>
</CustomField>