force-app/main/default/objects/Contact/fields/Extract__c.field-meta.xml
<CustomField>
    <fullName>Extract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to use it as a filter in extract files so as to export only specific records</description>
    <inlineHelpText>For internal use only</inlineHelpText>
    <label>Extract</label>
    <type>Checkbox</type>
</CustomField>