force-app/main/default/objects/Contact/fields/Form_Submitted_Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Form_Submitted_Most_Recent__c</fullName>
    <description>EQI</description>
    <label>Form Submitted (Most Recent)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>