force-app/main/default/objects/Contact/fields/Has_a_Footwear_Program__c.field-meta.xml
<CustomField>
    <fullName>Has_a_Footwear_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EQI</description>
    <label>Has a Footwear Program</label>
    <type>Checkbox</type>
</CustomField>