force-app/main/default/objects/Contact/fields/Has_ROM_Store_Visit_Report__c.field-meta.xml
<CustomField>
    <fullName>Has_ROM_Store_Visit_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a ROM Visit report is attached to this contact. Used to exclude the contact from merges</description>
    <label>Has ROM Store Visit Report</label>
    <type>Checkbox</type>
</CustomField>