force-app/main/default/objects/Contact/fields/Have_a_Rep_Call__c.field-meta.xml
<CustomField>
    <fullName>Have_a_Rep_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eloqua Integrated</description>
    <label>Have a Rep Call</label>
    <type>Checkbox</type>
</CustomField>