force-app/main/default/objects/Contact/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <description>Home phone from the Lead record.</description>
    <inlineHelpText>Please enter the contat home phone in this field.</inlineHelpText>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>