force-app/main/default/objects/Contact/fields/IA_Account_Category__c.field-meta.xml
<CustomField>
    <fullName>IA_Account_Category__c</fullName>
    <description>Industrial Account Category from the related Account 
Field Type: IA 
Integration: No</description>
    <formula>TEXT( Account.IA_Account_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Category; National or Local/Major Account</inlineHelpText>
    <label>IA Account Category</label>
    <type>Text</type>
</CustomField>