force-app/main/default/objects/Contact/fields/Imported__c.field-meta.xml
<CustomField>
    <fullName>Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Contacts imported from ACT! or Outlook.</description>
    <label>Imported</label>
    <type>Checkbox</type>
</CustomField>