force-app/main/default/objects/Contact/fields/Industry_Description_Mrktg__c.field-meta.xml
<CustomField>
    <fullName>Industry_Description_Mrktg__c</fullName>
    <description>Industry Description collected on the RWFB Lead</description>
    <inlineHelpText>Industry Description collected on the RWFB Lead</inlineHelpText>
    <label>Industry Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Automotive  &amp; Transport</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Computer Hardware</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consumer Products Manufacturers</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>Environmental Services &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Industrial Manufacturing</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Mining</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Telecommunications Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>