force-app/main/default/objects/Contact/fields/Industry_SIC__c.field-meta.xml
<CustomField>
    <fullName>Industry_SIC__c</fullName>
    <label>Industry (SIC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Production -- Crops (1)</fullName>
            </value>
            <value>
                <fullName>Agricultural Production -- Livestock (2)</fullName>
            </value>
            <value>
                <fullName>Agricultural Services (7)</fullName>
            </value>
            <value>
                <fullName>Chemicals/Pharmaceuticals (28)</fullName>
            </value>
            <value>
                <fullName>Coal Mining (12)</fullName>
            </value>
            <value>
                <fullName>Construction (15)</fullName>
            </value>
            <value>
                <fullName>Electrical and Electronic Equipment (36)</fullName>
            </value>
            <value>
                <fullName>Fabricated Metal Products (34)</fullName>
            </value>
            <value>
                <fullName>Fishing, Hunting, Trapping (9)</fullName>
            </value>
            <value>
                <fullName>Food &amp; Kindred Products (20)</fullName>
            </value>
            <value>
                <fullName>Forestry (8)</fullName>
            </value>
            <value>
                <fullName>Heavy Construction (16)</fullName>
            </value>
            <value>
                <fullName>Hi-Tech Industry</fullName>
            </value>
            <value>
                <fullName>Industrial and Commercial Machinery (35)</fullName>
            </value>
            <value>
                <fullName>Lumber Manufacturers (24)</fullName>
            </value>
            <value>
                <fullName>Metal Mining (10)</fullName>
            </value>
            <value>
                <fullName>Non-Metallic Minerals (14)</fullName>
            </value>
            <value>
                <fullName>Oil and Gas Extraction (13)</fullName>
            </value>
            <value>
                <fullName>Paper and Allied Products (26)</fullName>
            </value>
            <value>
                <fullName>Petroleum Refining (29)</fullName>
            </value>
            <value>
                <fullName>Primary Metal Manufacturers (33)</fullName>
            </value>
            <value>
                <fullName>Printing, Publishing (27)</fullName>
            </value>
            <value>
                <fullName>Public Utility (49)</fullName>
            </value>
            <value>
                <fullName>Sanitary Landfills (49)</fullName>
            </value>
            <value>
                <fullName>Specialty Trade Contractors (17)</fullName>
            </value>
            <value>
                <fullName>Stone, Clay and Glass (32)</fullName>
            </value>
            <value>
                <fullName>Tranportation- Water (473100,- 4788900)</fullName>
            </value>
            <value>
                <fullName>Transporation - Air (45)</fullName>
            </value>
            <value>
                <fullName>Transportation Equipment (37)</fullName>
            </value>
            <value>
                <fullName>Transportation - petro (46)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>