force-app/main/default/objects/Contact/fields/Interested_in_a_Footwear_Program__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_a_Footwear_Program__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Interested in a Footwear Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>