force-app/main/default/objects/Contact/fields/Invoice_Payment_Portal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Portal_Notes__c</fullName>
    <description>Notes about the Invoice Payment Portal Website for uploading invoices</description>
    <inlineHelpText>Notes about the Invoice Payment Portal Website for uploading invoices</inlineHelpText>
    <label>Invoice Payment Portal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>