force-app/main/default/objects/Contact/fields/Invoice_Payment_Portal_Password__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Portal_Password__c</fullName>
    <description>Password needed to access the Invoice Payment Portal Website</description>
    <inlineHelpText>Password needed to access the Invoice Payment Portal Website</inlineHelpText>
    <label>Invoice Payment Portal Password</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>