force-app/main/default/objects/Contact/fields/Invoice_Payment_Portal_Username__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment_Portal_Username__c</fullName>
    <description>Username needed to access the Invoice Payment Portal Website</description>
    <inlineHelpText>Username needed to access the Invoice Payment Portal Website</inlineHelpText>
    <label>Invoice Payment Portal Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>