force-app/main/default/objects/Contact/fields/Is_Payroll_Deduction_an_Option__c.field-meta.xml
<CustomField>
    <fullName>Is_Payroll_Deduction_an_Option__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Is Payroll Deduction an Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>