force-app/main/default/objects/Contact/fields/Is_there_a_Company_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Company_Subsidy__c</fullName>
    <description>Eloqua Integrated</description>
    <label>Is there a Company Subsidy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>