force-app/main/default/objects/Contact/fields/IsEligibleforSurvey__c.field-meta.xml
<CustomField>
    <fullName>IsEligibleforSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contacts designated as eligible to receive a Customer Experience survey. This can be contrasted with the Do Not Send Survey Flag.</description>
    <label>Is Eligible for Survey</label>
    <type>Checkbox</type>
</CustomField>