force-app/main/default/objects/Contact/fields/ISM_FSL__c.field-meta.xml
<CustomField>
    <fullName>ISM_FSL__c</fullName>
    <description>Eloqua Integrated</description>
    <label>ISM - FSL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>