force-app/main/default/objects/Contact/fields/ISM_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>ISM_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Primary Contact for ISM</inlineHelpText>
    <label>ISM Primary Contact</label>
    <type>Checkbox</type>
</CustomField>