force-app/main/default/objects/Contact/fields/IsSelected__c.field-meta.xml
<CustomField>
    <fullName>IsSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is selected indicator used to select contacts for various one-time operations</description>
    <inlineHelpText>Is selected indicator used to select contacts for various one-time operations</inlineHelpText>
    <label>IsSelected</label>
    <type>Checkbox</type>
</CustomField>